--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -15,9 +15,24 @@
   }
 
   .product-filters {
+    position: sticky;
+    top: 0;
+    left: 15rem;
     display: flex;
-    justify-content: space-around;
-    margin: 3rem 0;
+    justify-content: flex-start;
+    margin: 2rem 0;
+
+    &__item{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 3rem;
+      height: 3rem;
+      border-radius: 50%;
+      background-color: rgb(226, 226, 226);
+      margin-right: 1rem;
+      cursor: pointer;
+    }
 
 
   }
@@ -55,7 +70,7 @@
         flex-direction: column;
         justify-content: center;
         border-radius: 0 0 15px 15px;
-        transition: height .5s;
+        transition: all .5s;
 
         &--count {
           display: none;
