--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -44,12 +44,35 @@ body {
 }
 
 .main .product-filters {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  left: 15rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  margin: 3rem 0;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  margin: 2rem 0;
+}
+
+.main .product-filters__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  background-color: #e2e2e2;
+  margin-right: 1rem;
+  cursor: pointer;
 }
 
 .main .products-list {
@@ -99,8 +122,8 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   border-radius: 0 0 15px 15px;
-  -webkit-transition: height .5s;
-  transition: height .5s;
+  -webkit-transition: all .5s;
+  transition: all .5s;
 }
 
 .main .products-list .product-item__price--count {
