--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -12,32 +12,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 2rem 0;
   }
 
-  .product-filters {
-    position: sticky;
-    top: 0;
-    left: 15rem;
-    display: flex;
-    justify-content: flex-start;
-    margin: 2rem 0;
-
-    &__item{
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 3rem;
-      height: 3rem;
-      border-radius: 50%;
-      background-color: rgb(226, 226, 226);
-      margin-right: 1rem;
-      cursor: pointer;
-    }
-
-
+  .product-option__text{
+    margin-right: 2rem;
+    font-size: 1.2rem;
   }
-
-
 
   .products-list {
     display: grid;
