--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -41,38 +41,12 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding: 2rem 0;
 }
 
-.main .product-filters {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
-  left: 15rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  margin: 2rem 0;
-}
-
-.main .product-filters__item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 3rem;
-  height: 3rem;
-  border-radius: 50%;
-  background-color: #e2e2e2;
-  margin-right: 1rem;
-  cursor: pointer;
+.main .product-option__text {
+  margin-right: 2rem;
+  font-size: 1.2rem;
 }
 
 .main .products-list {
