--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -44,9 +44,35 @@ body {
   padding: 2rem 0;
 }
 
+.main .product-count {
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: #424242;
+}
+
+.main .product-option {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.main .product-option__select {
+  position: relative;
+  margin: 0 auto;
+  font-family: "Open Sans", "Helvetica Neue", "Segoe UI", "Calibri", "Arial", sans-serif;
+  font-size: 18px;
+  color: #60666d;
+  padding: 0.2rem 1rem;
+}
+
 .main .product-option__text {
   margin-right: 2rem;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: #424242;
 }
 
 .main .products-list {
@@ -96,8 +122,8 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   border-radius: 0 0 15px 15px;
-  -webkit-transition: all .5s;
-  transition: all .5s;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
 }
 
 .main .products-list .product-item__price--count {
@@ -107,8 +133,8 @@ body {
   font-size: 22px;
   position: relative;
   top: 0;
-  -webkit-transition: all .5s;
-  transition: all .5s;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
 }
 
 .main .products-list .product-item__price--title {
@@ -127,7 +153,7 @@ body {
   border: none;
   width: 80%;
   margin: 0 auto;
-  padding: .5rem 0;
+  padding: 0.5rem 0;
 }
 
 .main .products-list .product-item:hover .product-item__price {
@@ -151,7 +177,7 @@ body {
 }
 
 .main .products-list .product-item:hover .product-item__price--button:hover {
-  opacity: .8;
+  opacity: 0.8;
 }
 
 .buy {
